[gd_scene load_steps=11 format=2]

[ext_resource path="res://extras/Clickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tiles/dice3.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/dice1.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/dice2.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/dice1b.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/dice2b.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles/dice3b.png" type="Texture" id=7]
[ext_resource path="res://blocks/BlinkBlock.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="Node2D" type="StaticBody2D"]
script = ExtResource( 8 )

[node name="AnimatedBlock" type="AnimatedSprite" parent="."]
modulate = Color( 0.764706, 0.721569, 0.682353, 1 )
position = Vector2( 8, 8 )
frames = SubResource( 1 )

[node name="AnimatedSpace" type="AnimatedSprite" parent="."]
modulate = Color( 0.486275, 0.270588, 0.294118, 1 )
position = Vector2( 8, 8 )
frames = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 1, 0, 0, 1, 0, 15, 1, 16, 15, 16, 16, 15, 16, 1, 15, 0 )

[node name="Clickable" parent="." instance=ExtResource( 1 )]

[connection signal="animation_finished" from="AnimatedBlock" to="." method="_on_AnimatedBlock_animation_finished"]
